# gyming

./: .gitignore  .pre-commit-config.yaml  flake.nix  generate_dataset.py  pyproject.toml  slurm.sh  train.py
agents/: __init__.py  dqn.py  ppo.py  ppo_custom.py
agents/policy/: ppo.py
experiments/: all.sh  all_inn.sh  all_mlp.sh  cartpole.py
utils/: __init__.py  buffers.py  evaluation.py  inn_networks.py  live_plotter.py  networks.py
