[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gyming"
version = "0.0.0a"
description = ""
readme = "README.md"
requires-python = "==3.12.*"
license = {text = ""}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = []
classifiers = []
dependencies = [
    "click>=8.3.0",
    "gymnasium[accept-rom-license,atari,box2d,classic-control,other]>=1.2.1",
    "torch>=2.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.urls]
Repository = "https://github.com/"

# Ruff configuration
[tool.ruff]
line-length = 128
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "modules/",
    "data/",
    "cache/",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), and isort (I)
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() without an explicit strict= parameter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
